--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,11 @@
-# Optimized requirements for Mac M1
-# Specific versions for stability and performance
-
-# Core dependencies
-yt-dlp>=2023.12.30
-faster-whisper>=0.10.0
-transformers>=4.36.0
-torch>=2.1.0
+yt-dlp>=2023.7.6
+faster-whisper>=0.9.0
+transformers>=4.30.0
+torch>=2.0.0
+moviepy>=1.0.3
+nltk>=3.8
 numpy>=1.24.0
-soundfile>=0.12.1
-
-# System monitoring
 psutil>=5.9.0
-
-# GUI (included in Python)
-# tkinter - built-in
-
-# Optional dependencies for Mac M1 performance
-# Uncomment if available:
-# accelerate>=0.25.0  # For Hugging Face optimizations
-# optimum>=1.16.0     # For model optimizations
+pathlib
+requests>=2.28.0
+ffmpeg-python>=0.2.0
